Fixed redundant code; Fixed misplaced padding; Made fieldset outline disappear on mobile; Made banner text size shrink on mobile; Worked on input alignment

--- a/screen.css
+++ b/screen.css
@@ -17,7 +17,7 @@ body {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2em;
 }
 
 h2 {
@@ -26,6 +26,7 @@ h2 {
   color: white;
   margin-bottom: .5em;
 }
+
 h3 {
 	font-weight: bold;
 }
@@ -34,20 +35,16 @@ span {
   color: crimson;
   font-size: 1.5em;
 }
-fieldset{
-	border: 1px solid white;
-	padding: .5em;
-	border-radius: .5em;
-}
+
 select{
 	background-color: rgba(10,10,10, .1) ;
 	color:ghostwhite;
 	padding: 0.5em;
 	border-radius: .5em;
 }
+
 legend{
 	text-align: center;
-	padding: 1em 0;
 }
 
 /*Classes and ids for layout*/
@@ -60,7 +57,7 @@ legend{
 
 .wrapper {
   background-color: rgba(10,10,10, .55);
-  padding: 2em;
+  padding: 1em;
 }
 
 .wrapper label {
@@ -160,24 +157,44 @@ legend{
 
 /*Balance Page***********/
 #balance_page{
-	max-width: 40em;
 	color:ghostwhite;
 	padding-bottom: 4em;
-	margin:0.5em;
+}
+
+#balance_page .labelsdiv {
+  display: inline-block;
+  max-width: 100%;
+}
+
+#balance_page label {
+ display: block;
+  margin-bottom: 1.95em;
+  max-width: 100%;
+}
+
+#balance_page .inputsdiv {
+ display: inline-block;
+ float: right;
+  max-width: 100%;
+}
+
+.inputsdiv input, radio {
+  display: block;
+  max-width: 100%;
 }
 
 #payment_amount{
 	display: none;
-	width:100%;
+	width: 100%;
+}
 
+fieldset {
+  border: 0px solid white;
+  
 }
-#payment_amount label{
-	float:left;
-	width:25%;
-	text-align:left;
-}
+
 #payment_amount button{
-	float:left;
+    display: inline-block;
 }
 
 .display_balance{
@@ -190,31 +207,27 @@ legend{
 #btn_pay{
 	min-width:30%;
 	float:right;
-	
-}
-  
-input #payment_amount.wrapper{
-	/*display: inline;*/
 }
 
-.labelandinput {
-  margin: 1em 0;
+#balance_back, #balance_continue {
+  display: block;
 }
+
+
 
 /*Payment Page*/
 
 #payment_page{
-	color:ghostwhite;
+  color:ghostwhite;
+  max-width: 40em;
+  
 }
-#payment_page.wrapper{
-background: linear-gradient(to bottom, #45484d 0%,rgba(0,0,0, .6)100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 
 }
 #select_payment{
 	display:flex;
 	flex-direction:column;
 	margin: 1em auto;
-	
 }
 
 /* Receipt */
@@ -231,8 +244,7 @@ background: linear-gradient(to bottom, #45484d 0%,rgba(0,0,0, .6)100%); /* W3C, 
     display: inline;
   }
   #balance_page{
-	width:70%; 
-	margin: 1em auto;
+	max-width: 40em;
 
    
 
@@ -243,11 +255,17 @@ background: linear-gradient(to bottom, #45484d 0%,rgba(0,0,0, .6)100%); /* W3C, 
 
 @media screen and (min-width: 37.5em) {
   
+  h1 {
+    font-size: 3em;
+  }
+  
   .wrapper {
     margin: 2em;
     border: 1px solid;
     border-radius: .5em;
+    padding: 2em;
   }
+  
   
   .sections {
     align-self: flex-end;
@@ -257,14 +275,19 @@ background: linear-gradient(to bottom, #45484d 0%,rgba(0,0,0, .6)100%); /* W3C, 
     padding: 1em 1em;
     background-color: rgba(45, 45, 45, .5);
     border-radius: 10px;
-
     font-family: 'Futura', sans-serif;
 
   }
-  #balance_page{
-	width:70%; 
+  #balance_page, #payment_page{
 	margin: 1em auto;
-
   }
+  
+  fieldset {
+    border: 1px solid white;
+    padding: 1em;
+    border-radius: .5em;
+    margin-bottom: 1.5em;
+  }
+  
   
 }
